--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> // todo: no need in jquery 2020 year
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script> 
-    <script src="index.js"></script>
+    <script src="index.js"></script> //todo: add deffer
   </body>
 
 </html>
