--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Chat</title>
     <meta name="author" content="ORKEMEY">
-
+    <base href="/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -53,10 +53,10 @@
 
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> // todo: no need in jquery 2020 year
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script> 
-    <script src="index.js"></script> //todo: add deffer
+    <script  src="/socket.io/socket.io.js"></script>
+    <script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script> 
+    <script defer src="./index.js"></script>
   </body>
 
 </html>
