--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,10 +36,10 @@
         </form>
 
         <form id="Signin" class="form-signin form-send">
-          <h2 id="SendFormLabel" class="form-signin-heading">Please sign in</h2>
+          <h2 id="SendFormLabel" class="form-signin-heading">Please sign up</h2>
           <input type="text" id="Login" class="input-block-level" placeholder="Login" >
           <input type="password" id="Password" class="input-block-level" placeholder="Password" >
-          <input type="button" class="btn btn-large btn-success" id="btnSignIn" value="Sign in"></input>
+          <input type="button" class="btn btn-large btn-success" id="btnSignIn" value="Sign up"></input>
           <input type="button" class="btn btn-large btn-primary" id="btnLogIn" value="Log in"></input>
         </form>
 
